[project]
name = "gamekeyproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "pytest-django>=4.12.0",
    "python-decouple>=3.8",
    "redis>=8.0.1",
]
